@@ -3942,7 +3942,7 @@ sub handle_configure
 			      'CONFIG_H_PATH' => $config_h_path,
 			      'STAMP'         => "$stamp"));
 
-	    push @distclean_config, $cn_sans_dir;
+	    push @distclean_config, $cn_sans_dir, $stamp;
 	}
     }
 
@@ -4029,17 +4029,6 @@ sub handle_configure
 	    {
 		next;
 	    }
-	}
-
-	# Some users have been tempted to put `stamp-h' in the
-	# AC_OUTPUT line.  This won't do the right thing, so we
-	# explicitly fail here.
-	if ($local eq 'stamp-h')
-	{
-	    # FIXME: allow real filename.
-	    file_error ($ac_config_files_location,
-			'stamp-h should not appear in AC_OUTPUT');
-	    next;
 	}
 
 	my @rewritten_inputs = rewrite_inputs_into_dependencies (1, @inputs);
