@@ -1,5 +1,17 @@
 2002-05-06  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
+	Erase stamps from the Makefile that generates them.
+
+	* automake.in (handle_configure): Append each used stamp to
+	@distclean_config.  Don't warn about stamp-h in AC_OUTPUT, this
+	file is not used anymore.
+	* lib/am/clean.am (distclean-generic): Don't erase stamp-h and
+	stamp-h[0-9]*.
+	* tests/subdir6.test: New file.
+	* tests/Makefile.am (TESTS): Add it.
+
+2002-05-06  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
 	Fix for condd.test (conditional `+='):
 	* automake.in (%appendvar): New.
 	(initialize_per_input): Clear it.
